<resources>
    <!-- Opening page texts -->
    <string name="app_name">Focus Pattern</string>
    <string name="give_name">Hi! Tell me your name</string>
    <string name="start_button">and let\'s go!</string>


    <!-- Intro page texts -->
    <string name="hello">Hello</string>
    <string name="intro_text1">Are you tired? Overloaded with information, strangled with threads. Need a break with your phone?</string>
    <string name="intro_text2">Instead of replacing one info overload with another, exercise your logical lobe with this perceptual quiz.</string>
    <string name="intro_text3">Take a break to enjoy the soothing patterns and colors, but be also wary of captious questions and stay focus. And then you are ready to go back to what you stopped doing.</string>
    <string name="start_button_intro">Let\'s go!</string>

    <!-- Quiz pages texts -->
    <string name="question">Which square is part of the bigger picture? <b> Scroll down.</b> </string>
    <string name="go_button">Next one</string>
    <string name="check_box_question">Did you see any black\'n\'white pattern here? Don\'t look up!</string>
    <string name="check_box2">YES! I remember b\'n\'w!</string>
    <string name="descriptive_question">What is round with cheese-like pattern?</string>
    <string name="input_answer">White, at night?</string>

    <!-- Result page texts -->
    <string name="submit_button">Check results</string>
    <string name="startPoints">0/3</string>
    <string name="good_job">Good job!</string>
    <string name="end_words">It\'s not about the result, it\'s about taking a break to relax. See you again soon.</string>

    <!-- Name for the "Hello" message on intro screen shown in the format of "Hello Magda" where Magda is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="hello_name">Hello "name"></string>

</resources>
